Fix header text hiding completely or wrapping wrongly

--- a/core/css/header.scss
+++ b/core/css/header.scss
@@ -143,6 +143,8 @@
 	#header-left, .header-left {
 		flex: 0 0;
 		flex-grow: 1;
+		overflow: hidden;
+		white-space: nowrap;
 	}
 
 	#header-right, .header-right {
